# shuttlings-cc24

./: Cargo.toml  README.md  Shuttle.toml  flake.nix
src/: bucket.rs  cargo_toml.rs  conversion.rs  game.rs  htmx.rs  main.rs  quote_book.rs
