[package]
name = "variasuit-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.3.1"
base64 = "0.22.1"
chrono = "0.4.39"
jwt-simple = "0.12.11"
leaky-bucket = "1.1.2"
rand = "0.8.5"
serde = "1.0.215"
serde_json = "1.0.133"
serde_yml = "0.0.12"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "chrono"] }
tokio = "1.26.0"
toml = "0.8.19"
uuid = "1.11.0"
